--- a/src/assets/styles/Landing.css
+++ b/src/assets/styles/Landing.css
@@ -1,4 +1,4 @@
-.lading {
+/* .lading {
     background-image: url('../img/fondo.jpg');
     min-height: 100vh;
     max-height: 800px;
@@ -20,4 +20,4 @@
 
 .lading h2 {
     font-size: clamp(2.5rem, 0.967rem + 4.259vw, 4.8rem)
-}
+} */
