--- a/src/assets/styles/Login.css
+++ b/src/assets/styles/Login.css
@@ -1,4 +1,4 @@
-.formLogin {
+/* .formLogin {
     background-image: url('../img/fondo.jpg');
     min-height: 100vh;
 }
@@ -10,4 +10,4 @@
 
 .formLogin strong:hover {
     text-decoration: underline;
-}
+} */
