--- a/src/assets/styles/Registro.css
+++ b/src/assets/styles/Registro.css
@@ -1,4 +1,4 @@
- .formRegistro {
+ /* .formRegistro {
      background-image: url('../img/fondo.jpg');
      min-height: 100vh;
      max-height: 800px;
@@ -11,4 +11,4 @@
 
  .formRegistro strong:hover {
      text-decoration: underline;
- }
+ } */
