--- a/src/assets/styles/Footer.css
+++ b/src/assets/styles/Footer.css
@@ -1,4 +1,4 @@
-footer * {
+/* footer * {
     color: #ffffff;
 }
 
@@ -41,4 +41,4 @@ footer * {
     text-align: center;
     margin-top: 25px;
     font-size: 17px;
-}
+} */
