--- a/src/assets/styles/LandingLayout.css
+++ b/src/assets/styles/LandingLayout.css
@@ -1,4 +1,4 @@
-.btnLogin{
+/* .btnLogin{
     background-color: rgb(30, 197, 80);
 }
 
@@ -6,4 +6,4 @@
     background-color: rgb(30, 197, 80);
     box-shadow: 0 0 10px rgb(30, 197, 80);
     color: #ebebeb !important;
-}
+} */
