--- a/src/assets/styles/Landing.css
+++ b/src/assets/styles/Landing.css
@@ -1,4 +1,4 @@
-/* .lading {
+.lading {
     background-image: url('../img/fondo.jpg');
     min-height: 100vh;
     max-height: 800px;
@@ -9,9 +9,8 @@
 }
 
 .btnRegistro:hover {
-    background-color: rgb(30, 197, 80);
+    background-color: #3de3c2;
     box-shadow: 0 0 10px rgb(30, 197, 80);
-    color: #ebebeb !important;
 }
 
 .lading>div {
@@ -20,4 +19,4 @@
 
 .lading h2 {
     font-size: clamp(2.5rem, 0.967rem + 4.259vw, 4.8rem)
-} */
+}
