feat: habilitar navegación a la página de Pagos y mejorar estilos en Registro y Landing

--- a/src/assets/styles/Landing.css
+++ b/src/assets/styles/Landing.css
@@ -2,6 +2,8 @@
     background-image: url('../img/fondo.jpg');
     min-height: 100vh;
     max-height: 800px;
+    background-repeat: no-repeat;
+     background-size: cover;
 }
 
 .btnRegistro {
