--- a/src/assets/styles/Pagos.css
+++ b/src/assets/styles/Pagos.css
@@ -1,7 +1,9 @@
-/* .pagosContainer {
+.pagosContainer {
     background-image: url('../img/fondo.jpg');
     min-height: 100vh;
     max-height: 800px;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .pagosContainer>div {
@@ -31,4 +33,4 @@
     background-color: #06D6A0;
     color: #000000;
     outline: 2px solid #000000;
-} */
+}
