--- a/src/assets/styles/Pagos.css
+++ b/src/assets/styles/Pagos.css
@@ -50,3 +50,16 @@
     text-align: center;
     font-size: clamp(2.5rem, 2.083rem + 1.157vw, 3.125rem)
 }
+
+.pagosContainer .btnSeleccionar {
+    background-color: #031633;
+}
+
+.pagosContainer .btnSeleccionar {
+    background-color: #031633;
+}
+
+.pagosContainer .btnSeleccionar:hover {
+    box-shadow: 0 0 10px #031633;
+    background-color: #28579e;
+}
