--- a/src/assets/styles/HeaderMain.css
+++ b/src/assets/styles/HeaderMain.css
@@ -3,3 +3,15 @@
     box-shadow: 0 0 10px rgb(30, 197, 80);
     color: black;
 }
+
+.navbar-nav .dropdown-menu {
+    position: absolute !important;
+    z-index: 1050;
+}
+
+@media (max-width: 992px) {
+    .navbar-nav .dropdown-menu {
+        position: relative !important;
+        z-index: 1050;
+    }
+}
