feat: Add personal information, subscription plan, and security components with modals for editing and confirmation
- Implemented InformacionPersonal component to display and edit user information.
- Created InformacionPlan component to show subscription details and change plan option.
- Developed InformacionSeguridad component for password management and account deletion.
- Added modals for changing password, confirming account deletion, and modifying user information.
- Introduced CambiarFoto modal for profile picture updates.
- Integrated all components into InformacionLayout for cohesive user experience.

--- a/public/index.css
+++ b/public/index.css
@@ -11,3 +11,14 @@ li {
 a {
   text-decoration: none;
 }
+
+.card-info {
+  width: 450px;
+  background: #18181b;
+  border-radius: 1rem;
+  padding: 2rem;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
