feat: Refactor user information handling and improve UI components
- Added user state management in InformacionPersonal, InformacionPlan, and InformacionSeguridad components to fetch user data from localStorage.
- Enhanced InformacionPlan to dynamically display subscription plan details based on user data.
- Updated InformacionSeguridad to show the last password update date and manage password visibility.
- Modified PeliculasCard to accept props for dynamic rendering of movie titles and covers.
- Improved Header components for better styling and user experience.
- Refactored AgregarPelicula and AgregarSerie modals to streamline the input fields.
- Removed unused services and hooks related to movie addition.
- Implemented new hooks (usePeliculas and useTrailer) for fetching movie data and trailers.
- Updated Peliculas and Ver pages to utilize new hooks for data fetching and error handling.
- Enhanced the overall structure and readability of the codebase.

--- a/src/assets/styles/HeaderLanding.css
+++ b/src/assets/styles/HeaderLanding.css
@@ -1,8 +1,8 @@
 .btnLogin {
-    background-color: rgb(30, 197, 80);
+    background-color: rgb(30, 197, 80) !important;
 }
 
 .btnLogin:hover {
-    background-color: #3de3c2;
+    background-color: #3de3c2 !important;
     box-shadow: 0 0 10px rgb(30, 197, 80);
 }
