--- a/src/assets/styles/Landing.css
+++ b/src/assets/styles/Landing.css
@@ -11,10 +11,12 @@
 }
 
 .btnRegistro {
-    background-color: rgb(30, 197, 80);
+    background-color: rgb(30, 197, 80) !important;
+    border: 2px solid rgb(30, 197, 80) !important;
 }
 
 .btnRegistro:hover {
-    background-color: #3de3c2;
-    box-shadow: 0 0 10px rgb(30, 197, 80);
+    background-color: #3de3c2 !important;
+    box-shadow: 0 0 10px rgb(30, 197, 80) !important;
+    color: black !important;
 }
