feat: Implement movie and series management features
- Added functionality to create, update, and delete movies in peliculasService.
- Enhanced planService to fetch plans with improved error handling.
- Removed unused registerService file.
- Introduced new components for user information, subscription plans, and security settings.
- Created hooks for managing user registration, authentication, and series management.
- Developed admin service for managing administrators.
- Added series service for fetching and creating series data.
- Implemented user service for user login and registration.
- Created user management page for admin to view and manage users.
- Added styling for payment and user information components.

--- a/src/assets/styles/Landing.css
+++ b/src/assets/styles/Landing.css
@@ -12,11 +12,9 @@
 
 .btnRegistro {
     background-color: rgb(30, 197, 80) !important;
-    border: 2px solid rgb(30, 197, 80) !important;
 }
 
 .btnRegistro:hover {
     background-color: #3de3c2 !important;
-    box-shadow: 0 0 10px rgb(30, 197, 80) !important;
-    color: black !important;
+    box-shadow: 0 0 10px rgb(30, 197, 80);
 }
