--- a/src/assets/styles/Registro.css
+++ b/src/assets/styles/Registro.css
@@ -8,9 +8,8 @@
 
  .formRegistro>form {
      background-color: rgba(0, 0, 0, 0.6);
-     gap: 20px
  }
 
  .formRegistro strong:hover {
-     text-decoration: underline;
+     text-decoration: underline !important;
  }
